<resources>
    <string name="app_name">F1 Racing LPG</string>
    <string name="pilotos">Pilotos</string>
    <string name="constructores">Constructores</string>
    <string name="Perfil">Perfil</string>
    <string name="circuitos">Circuitos</string>
    <string name="inicio">Inicio</string>
    <string name="navigation_drawer_open" />
    <string name="navigation_drawer_close" />
    <string name="separator"></string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_circuitDetail" />
    <string name="title_PilotDetail" />
</resources>